--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "bootstrap": "4.3.1",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "heroku": "^7.39.2",
         "jquery": "3.4.1",
         "moment": "^2.24.0",
         "mysql": "^2.18.1",
