--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
     "version": "5.1.1",
+    "engines": {
+    "node": "12.13.x"
+    }
     "scripts": {
         "start": "nodemon start index.js"
     },
+	,
+
     "description": "A simple sidbar navigation HTMl template built with Bootstrap",
     "keywords": [
         "css",
