--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "startbootstrap-simple-sidebar",
     "version": "5.1.1",
     "engines": {
-    "node": "12.13.x"
+    "node": "12.13.x",
     "npm":"6.x"
     },
     "scripts": {
