--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
-    "version": "6.x",
+    "version": "1.0.0",
     "engines": {
     "node": "12.13.x",
     "npm":"6.x"
